tests/reference/asr-incompatible_rank_assign-a69f7b4.stderr
semantic error: Incompatible ranks `0` and `1` in assignment
 --> tests/errors/incompatible_rank_assign.f90:2:1
  |
2 | integer :: x = [1,2,3]
  | ^^^^^^^^^^^^^^^^^^^^^^ 
